# javazone

./: .earthignore  .gitignore  .mise.toml  .prospector.yaml  Dockerfile  Earthfile  README.md  README.rst  dagger.json  development.http  docker-compose.yml  fnox.toml  mise.toml  pyproject.toml
.config/mise/: config.toml
.config/mise/tasks/: reseal-secret  update-python-version.py
.github/: dependabot.yaml
.github/workflows/: main.yaml
dagger/: pyproject.toml
dagger/src/main/: __init__.py
deploy/: application.yaml.j2  configmap.yaml  cronjob.yaml  ingress.yaml  sealed-secret.yaml
examples/: cancel.ics  invite.ics  update.ics
ibidem/javazone/: __main__.py  ics.py  mailtest.py  main.py  security.py
ibidem/javazone/core/: config.py
ibidem/javazone/database/: __init__.py  models.py
ibidem/javazone/http/: __init__.py  deps.py  probes.py  schemas.py
ibidem/javazone/http/api/: __init__.py
ibidem/javazone/http/api/v1/: __init__.py
ibidem/javazone/http/api/v1/endpoints/: email_queue.py  sessions.py  users.py
ibidem/javazone/http/www/: __init__.py  widgets.py
ibidem/javazone/mail/: __init__.py  sendgrid.py  smtp.py
ibidem/javazone/services/: sessions.py  users.py
ibidem/javazone/sleepingpill/: __init__.py
ibidem/javazone/templates/: session.html.j2  sessions.html.j2
ibidem/javazone/templates/widgets/: session_join_leave.html.j2  session_large.html.j2
javazone/: mail.py  mailtest.py  main.py  security.py
javazone/api/: __init__.py  deps.py  probes.py  schemas.py
javazone/api/v1/: __init__.py
javazone/api/v1/endpoints/: email_queue.py  sessions.py  teams.py  users.py
javazone/core/: config.py  logging.py
javazone/crud/: __init__.py  base.py
javazone/database/: __init__.py  models.py
javazone/http/: __init__.py  deps.py  probes.py  schemas.py
javazone/http/api/: __init__.py
javazone/http/api/v1/endpoints/: email_queue.py  sessions.py  users.py
javazone/http/www/: __init__.py  widgets.py
javazone/mail/: __init__.py  maileroo.py  sendgrid.py  smtp.py
javazone/services/: sessions.py  users.py
javazone/sleepingpill/: __init__.py
misc/coding-team/move-to-ibidem-namespace/: 001-move-package-and-update-all-references.md
templates/: base.html.j2  index.html.j2  session.html.j2  sessions.html.j2  todo.html.j2
templates/widgets/: profile.html.j2  session_common.html.j2  session_join_leave.html.j2  session_large.html.j2  session_small.html.j2
