[project]
name = "javazone"
version = "0.1.0"
description = "JavaZone calendar manager"
authors = [
    {name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no"},
]
license = {text = "MIT"}
requires-python = "~=3.13"
dependencies = [
    "fiaas-logging<1.0.0,>=0.1.1",
    "pydantic<3.0.0,>=2.9.2",
    "fastapi<1.0.0,>=0.115.2",
    "uvicorn[standard]<1.0.0,>=0.34.0",
    "SQLAlchemy<3.0.0,>=2.0.36",
    "pymysql<2.0.0,>=1.1.1",
    "pydantic-settings<3.0.0,>=2.6.0",
    "requests<3.0.0,>=2.32.3",
    "furl<3.0.0,>=2.1.3",
    "authlib<2.0.0,>=1.3.2",
    "httpx<1.0.0,>=0.28.0",
    "sendgrid<7.0.0,>=6.11.0",
    "icalendar<7.0.0,>=6.0.0",
    "anyio<5.0.0,>=4.6.2",
    "psycopg[binary]==3.2.12",
    "jinja2>=3.1.6",
    "maileroo>=1.0.0",
]

[dependency-groups]
dev = [
    "setuptools==80.9.0",
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "black==25.11.0",
]

[tool.black]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]

